kube/09-ingress/deployment-mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: myapp
  labels:
    app: mydjango
spec:
  ports:
    - port: 3306
  selector:
    app: mydjango
    tier: database
  # type: LoadBalancer
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: mysql
  namespace: myapp
  labels:
    app: mydjango
spec:
  selector:
    matchLabels:
      app: mydjango
      tier: database
  template:
    metadata:
      labels:
        app: mydjango
        tier: database
    spec:
      containers:
      - image: mysql:5
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
