kube/09-ingress/01-ingress-simple.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: myingress
spec:
  backend:
    serviceName: mydjango
    servicePort: 8000
